[package]
name = "macroquad-canvas"
version = "0.3.2"
authors = ["alexmozaidze <alexman2622@gmail.com>", "nicolas <nicolas.sabbatini.95@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Adds canvas functionality to macroquad."
repository = "https://gitlab.com/alexmozaidze/macroquad-canvas"
keywords = ["macroquad"]
categories = ["game-development"]
exclude = ["examples"]

[dependencies]
macroquad = "0.4"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "mouse"
path = "examples/mouse.rs"
